...
            }) {
                ZStack {
                    Circle()
                        .fill(Color.white)
                        .frame(width: isIpad ? 84 : 74, height: isIpad ? 84 : 74)
                    
                    Image(systemName: viewModel.isPlaying ? "pause.fill" : "play.fill")
                        .font(.system(size: isIpad ? 36 : 34))
                        .foregroundColor(.black)
                }
            }
            
            // Skip Forward 10s
...
