...
                }
            } else {
                VStack(spacing: 20) {
                    Image(systemName: "lock.circle.fill")
                        .appSecondaryIconStyle(size: 80, color: .homeTextSecondary)
                    
                    Text("Private Folder Locked")
                        .font(.title2)
                        .fontWeight(.bold)
                        .foregroundColor(.white)
                    
                    Text("Use FaceID/TouchID to access secure videos.")
                        .font(.body)
...
