...
                                }
                                .scrollBounceBehavior(.basedOnSize, axes: .horizontal)
                            }
                            
                                VStack(alignment: .leading) {
                                    HStack {
                                        Text("Videos")
                                            .font(.headline)
                                            .foregroundColor(.homeTextPrimary)
                                        Spacer()
                                        // "View All" functionality
                                        NavigationLink(destination: FolderDetailView(initialFolder: Folder(name: "All Videos", videoCount: viewModel.videos.count, videos: viewModel.videos), viewModel: viewModel)) {
                                            Text("View All")
...
